# docs/swagger.json
@@ -8,6 +8,52 @@
         "version": "1.0"
     },
     "paths": {
+        "/api/v1/accounts": {
+            "post": {
+                "description": "Create a new user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "Create User",
+                "parameters": [
+                    {
+                        "description": "Create user request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/createaccount.CreateUserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/createaccount.CreateUserResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/createaccount.CreateUserResponseError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/createaccount.CreateUserResponseError"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/accounts/:id/balance": {
             "get": {
                 "description": "Get the balance of an account",
@@ -49,52 +95,6 @@
                         "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/getbalance.GetBalanceResponseError"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/accounts/create": {
-            "post": {
-                "description": "Create a new user",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "text/plain"
-                ],
-                "tags": [
-                    "accounts"
-                ],
-                "summary": "Create User",
-                "parameters": [
-                    {
-                        "description": "Create user request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/createaccount.CreateUserRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "schema": {
-                            "$ref": "#/definitions/createaccount.CreateUserResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/createaccount.CreateUserResponseError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/createaccount.CreateUserResponseError"
                         }
                     }
                 }
